# azure-pipelines

./: .gitignore  .lvimrc  CHANGELOG.md  Cargo.toml  README.md  azure-pipelines.yml  coverage.yml  default.yml  install-rust.yml  nightly-only.yml  rust.yml
azure/: _setup.yml  cargo-check.yml  cargo-clippy.yml  coverage.yml  install-rust.yml  nightly-stages.yml  rustfmt.yml  stages.yml  style.yml  test.yml  tests.yml
docs/: _config.yml  configuration.md  custom.md  index.md  setup.md
docs/_layouts/: docs.html
src/: lib.rs
sub/src/: lib.rs
