[package]
name = "ci-demo"
version = "0.1.0"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
edition = "2018"

[features]
opt_out = []
opt_in = []
default = ["opt_out"]

[badges]
azure-devops = { project = "crate-ci/crate-ci", pipeline = "azure-pipelines", build = "32" }
codecov = { repository = "crate-ci/azure-pipelines", branch = "master", service = "github" }
